--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,13 +65,13 @@
     <string name="category_overview">Overview</string>
 
     <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
-    <string name="hint_product_name">Name</string>
+    <string name="hint_product_name">Name (Required)</string>
 
     <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
     <string name="hint_product_price">Price</string>
 
     <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
-    <string name="hint_product_quantity">Quantity</string>
+    <string name="hint_product_quantity">Quantity (Required)</string>
 
     <!-- Text hint for supplier field in the editor [CHAR LIMIT=30] -->
     <string name="hint_product_supplier">Supplier</string>
